fix: layout alignment issues

--- a/src/components/ambition/ambition.module.css
+++ b/src/components/ambition/ambition.module.css
@@ -14,7 +14,7 @@
 .card {
   width: 32%;
   height: 640px;
-  border-radius: 12px;
+  border-radius: .75rem;
   padding: 20px;
   background-color: #ffffff;
   display: flex;
@@ -24,7 +24,7 @@
 
 .bgImage {
   position: absolute;
-  top: 20px;
+  top: 1.25rem;
   right: 0;
   height: 100px;
 }
@@ -38,7 +38,7 @@
 }
 
 .cardHeading {
-  font-size: 20px;
+  font-size: 1.25rem;
   margin-bottom: 8rem;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .contentFontSize {
-  font-size: 30px;
+  font-size: 1.8rem;
 }
 
 .fontBold {
@@ -59,7 +59,7 @@
 }
 
 .heading {
-  font-size: 38px;
+  font-size: 2.3rem;
   font-weight: 600;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .subHeading {
-  font-size: 20px;
+  font-size: 1.25rem;
   width: 50%;
 }
 
@@ -85,9 +85,9 @@
 }
 
 .iconBg {
-  width: 40px;
+  width: 2.5rem;
   border-radius: 50%;
-  height: 40px;
+  height: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,23 +105,23 @@
 .itemContainer {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 1.8rem;
 }
 
 .itemHeading {
-  font-size: 54px;
+  font-size: 3.3rem;
   font-weight: 700;
   color: #141d44;
 }
 
 .itemContent {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #141d44;
 }
 
 .name {
-  font-size: 20px;
+  font-size: 1.2rem;
   margin-top: auto;
 }
 
