--- a/src/components/testimonials/item.module.css
+++ b/src/components/testimonials/item.module.css
@@ -1,25 +1,25 @@
 .container {
-    min-width: 340px;
-    max-width: 340px;
-    height: 200px;
+    min-width: 22rem;
+    max-width: 22rem;
+    height: 12.5rem;
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
     justify-content: space-between;
     backdrop-filter: blur(6px);
     background-color: #d7d7d763;
-    border-radius: 12px;
+    border-radius: .75rem;
 }
 
 .name {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: 600;
     color: #353535;
 }
 
 .content {
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 400;
     color: #2d2d2d;
 }
