--- a/src/components/testimonials/testimonial.module.css
+++ b/src/components/testimonials/testimonial.module.css
@@ -34,7 +34,7 @@
 }
 
 .heading {
-    font-size: 38px;
+    font-size: 2.3rem;
     font-weight: 600;
 }
 
@@ -48,11 +48,11 @@
 
 .panelWrapper {
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .panelWrapperReverse {
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
     margin: 3rem 0 0 12rem;
 }
