--- a/src/components/whatWeDo/item.module.css
+++ b/src/components/whatWeDo/item.module.css
@@ -1,17 +1,17 @@
 .container {
     transition: all ease 500ms;
-    border-radius: 20px;
+    border-radius: 1.2rem;
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: .8rem;
     box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
     width: 24rem;
 }
 
 .heading {
     color: #6d6d6d;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: 600;
     transition: all ease 500ms;
 }
@@ -22,7 +22,7 @@
 
 .content {
     color: #323232;
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 300;
 }
 
