--- a/src/components/whatWeDo/whatWeDo.module.css
+++ b/src/components/whatWeDo/whatWeDo.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100vw;
-  height: 100vh;
-  padding: 0 12rem;
+  min-height: 100vh;
+  padding: 6rem 12rem;
   display: flex;
   align-items: center;
   gap: 40px;
@@ -23,16 +23,16 @@
 }
 
 .heading {
-  font-size: 38px;
+  font-size: 2.3rem;
   font-weight: 600;
   color: #febd00;
   width: 70%;
-  margin-bottom: 20px;
+  margin-bottom: 1.2rem;
 }
 
 .subHeading {
   color: #404040;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 300;
   width: 100%;
 }
