--- a/src/components/whatWeOffer/whatWeOffer.module.css
+++ b/src/components/whatWeOffer/whatWeOffer.module.css
@@ -11,9 +11,9 @@
 
 .heading {
     color: #515151;
-  font-size: 38px;
+  font-size: 2.3rem;
   font-weight: 600;
-  line-height: 52px;
+  line-height: 3.25rem;
 }
 
 .subHeading {
